# libmio

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac
libs/: Makefile.in
libs/libstrophe/: Makefile.am  configure  configure.scan
libs/libstrophe/autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile.am  global_mio.h  mio.h  mio_affiliations.c  mio_affiliations.h  mio_collection.c  mio_collection.h  mio_connection.c  mio_connection.h  mio_error.c  mio_error.h  mio_geolocation.c  mio_geolocation.h  mio_handlers.c  mio_handlers.h  mio_meta.c  mio_meta.h  mio_node.c  mio_node.h  mio_packet.c  mio_packet.h  mio_pubsub.c  mio_pubsub.h  mio_reference.c  mio_reference.h  mio_schedule.c  mio_schedule.h  mio_stanza.c  mio_transducer.c  mio_transducer.h  mio_user.c  mio_user.h  uthash.h
tools/: Makefile.am  mio_acl.c  mio_actuate.c  mio_authenticate.c  mio_collection.c  mio_item_query.c  mio_meta.c  mio_node.c  mio_password_change.c  mio_publish_data.c  mio_reference.c  mio_schedule.c  mio_subscriptions.c
